hint/kuber/item_kube/secret_describe.yaml
# Деплойман который всостоянии использовать секреты 
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kuber-2
  labels:
    app: kuber-2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: http-server-2
  template:
    metadata:
      labels:
        app: http-server-2
    spec:
      containers:
      - name: kuber-app
        image: bakavets/kuber:v2.0
        ports:
        - containerPort: 8000
---
# монтироване секрепа в под с использованием определённых значений 
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kuber-2
  labels:
    app: kuber-2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: http-server-2
  template:
    metadata:
      labels:
        app: http-server-2
    spec:
      containers:
      - name: kuber-app
        image: bakavets/kuber:v2.0
        ports:
        - containerPort: 8000
        volumeMounts:
        - name: secrets
          mountPath: "/etc/secrets"
      volumes:
      - name: secrets
        secret:
          secretName: secret-data
          items:
          - key: username
            path: my-group/my-username
