hint/kuber/item_kube/ServiceAccount_Role_RoleBinding__describe.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: example-2
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kuber-2
  namespace: example-2
  labels:
    app: kuber-2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: http-server-2
  template:
    metadata:
      labels:
        app: http-server-2
    spec:
      serviceAccountName: app-sa-2 # указываем какие права у нас есть 
      containers:
        - name: kuber-app
          image: bakavets/kuber:v2.0
          ports:
            - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: kuber-service-2
  namespace: example-2
spec:
  selector:
    app: http-server-2
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
