hint/kuber/item_kube/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: main-ingress # название контроллера 
spec:
  rules:
   - host: app.example.com # доменное имя к которому прекреплённ энгресс 
     http:
        paths: # тут писанны отдельные сигменты за энгресса 
          - pathType: Prefix
            path: / # добавочный путь к dns имени 
            backend:
              service:  # тут указываепм сервис за которм следит энгресс 
                name: kuber-service
                port:
                  number: 80
          - pathType: Prefix
            path: /v1
            backend:
              service:
                name: kuber-service-v1
                port:
                  number: 80
          - pathType: Exact
            path: /v2
            backend:
              service:
                name: kuber-service-v2
                port:
                  number: 80
   - host: app-v3.example.com
     http:
        paths:
          - pathType: Exact
            path: /
            backend:
              service:
                name: kuber-service-v3
                port:
                  number: 80
