hint/kuber/item_kube/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: kafka-network
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              network/kafka-network: "true"
      ports:
        - protocol: TCP
          port: 8080
  podSelector:
    matchLabels:
      network/kafka-network: "true"
